package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

METISFL_VERSION="1.0.0"

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "py38",
    define_values = {
        "python": "3.8"
    }
)

config_setting(
    name = "py39",
    define_values = {
        "python": "3.9"
    }
)

config_setting(
    name = "py310",
    define_values = {
        "python": "3.10"
    }
)

py_library(
    name="metisfl-lib",
    data = [
        "//metisfl/resources:res"
    ], 
    deps = [
        "//metisfl/controller:controller_lib",
        "//metisfl/encryption:encryption_lib",
        "//metisfl/driver:driver_lib",
        "//metisfl/learner:learner_lib",
        "//metisfl/proto:proto_lib",
        # "//metisfl/examples:examples_lib" # TODO: Decide if we will ship examples as part of the lib 
    ]
)

py_package(
    name = "metisfl-pkg",
    deps = [":metisfl-lib"],
)

py_wheel(
        name = "metisfl-wheel",
        classifiers = [
            "Development Status :: 2 - Pre-Alpha",
            "Intended Audience :: Developers",
            "License :: OSI Approved :: BSD",
            "Operating System :: UNIX",
            "Operating System :: Microsoft :: Windows",
            "Operating System :: MacOS :: MacOS X",
            "Topic :: Software Development :: Testing",
            "Topic :: Software Development :: Libraries",
            "Programming Language :: Python",
            "Programming Language :: Python :: 3.8",
            "Programming Language :: Python :: 3.9",
            "Programming Language :: Python :: 3.10",
            "Programming Language :: C++"
        ],
        distribution = "metisfl",
        homepage = "https://www.nevron.ai",
        license = "Apache 2.0",
        python_requires = ">=3.8",     
        python_tag = select({
            ":py38": "py38",
            ":py39": "py39",
            ":py310": "py310",
        }),
        # TODO: Fix versions
        requires = [
            "cloudpickle>=2.2.1",
            "fabric>=3.1.0",
            "future>=0.18.3",
            "grpcio>=1.48.1",
            "numpy>=1.23.5",
            "pandas>=1.5.3",
            "Pebble>=5.0.3",
            "protobuf==3.20.3",
            "pyfiglet>=0.8.post1",
            "torch>=2.0.1",
            "PyYAML>=5.4.1",
            "scikit-learn>=1.2.2",
            "scipy>=1.9.3",
            "termcolor>=2.3.0",
        ],
        extra_requires = {
            "tensorflow": [
                "tensorflow",
                "tensorflow-addons"
            ]
        },
        platform = select({
            "//:linux_x86_64": "manylinux2014_x86_64"
        }),
        version = METISFL_VERSION,
        visibility = ["//visibility:public"],
        deps = [
            ":metisfl-pkg",
        ]
    )