[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metisfl"
version = "1.0.0"
description = "A developer-friendly and enterprise-ready federated learning framework."
readme = "README.md"
authors = [{ name = "Dimitris Stripelis", email = "stripelis@nevron.ai" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["federated learning", "machine learning"]
dependencies = [

] # TODO:
requires-python = ">=3.7"

[project.optional-dependencies]
tensorflow = [
] # this will be installed on pip install metisfl[tensorflow], default let's to pytorch

[project.scripts]
metisfl = "" # TODO: this will expose the metisfl command in user's env, useful for cli

[project.urls]
repository = "https://github.com/NevronAI"
documentation = "https://docs.nevron.ai"

[tool.isort]
profile = "black"
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true
