load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "plotting",
    main = "convergence_plots.py",
    srcs = [
        "convergence_plots.py",
    ],
    srcs_version = "PY3",
    python_version = "PY3",
    legacy_create_init = False,
)
