load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "neuroimaging",
    main = "neuroimaging.py",
    srcs = [
        "neuroimaging.py",
    ],
    srcs_version = "PY3",
    python_version = "PY3",
    legacy_create_init = False,
    data = [
        # To be able to load the federation environments .yaml files relative to the execution script.
        "//experiments/federation_environments_config:configuration_files",
        "//experiments/keras/datasets/adni:experiment_data",
        "//experiments/keras/datasets/ukbb:experiment_data",
    ],
    deps = [
        "//experiments/keras/models:keras_models_py_lib",
        "//projectmetis/python/driver:driver_py_lib",
    ],
)

py_binary(
    name = "cifar10",
    main = "cifar10.py",
    srcs = [
        "cifar10.py",
    ],
    srcs_version = "PY3",
    python_version = "PY3",
    legacy_create_init = False,
    data = [
        # To be able to load the federation environments .yaml files relative to the execution script.
        "//experiments/federation_environments_config:configuration_files",
        "//experiments/keras/datasets/cifar:experiment_data",
    ],
    deps = [
        "//experiments/utils:experiments_utils_py_lib",
        "//experiments/keras/models:keras_models_py_lib",
        "//projectmetis/python/driver:driver_py_lib",
        "//projectmetis/python/models/keras/optimizers:models_keras_optimizers_py_lib",
    ],
)

py_binary(
    name = "fashionmnist",
    main = "fashionmnist.py",
    srcs = [
        "fashionmnist.py",
    ],
    srcs_version = "PY3",
    python_version = "PY3",
    legacy_create_init = False,
    data = [
        # To be able to load the federation environments .yaml files relative to the execution script.
        "//experiments/federation_environments_config:configuration_files",
        "//experiments/keras/datasets/fashionmnist:experiment_data",
    ],
    deps = [
        "//experiments/utils:experiments_utils_py_lib",
        "//experiments/keras/models:keras_models_py_lib",
        "//projectmetis/python/driver:driver_py_lib",
        "//projectmetis/python/models/keras/optimizers:models_keras_optimizers_py_lib",
    ],
)
