load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "experiments_utils_py_lib",
    srcs = [
        "data_partitioning.py",
        "environment_generator.py",
    ],
    srcs_version = "PY3",
    data = [
        "//experiments/federation_environments_config:configuration_files",
    ],
    deps = [
        "//projectmetis/python/logging:logging_py_lib",
        "//projectmetis/python/utils:utils_py_lib",
    ],
)
