package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_binary")

# Generates driver python library.
py_library(
    name = "driver_py_lib",
    srcs = [
        "driver_session.py",
        "init_controller.py",
        "init_learner.py"
    ],
    srcs_version = "PY3",
    deps = [
        # NOTE: Why the first one?
        # "//experiments/keras/models:keras_models_py_lib",
        "//metisfl/proto:controller_py_grpc",
        "//metisfl/python/learner/core:learner_py_lib",
        "//metisfl/python/learner/models:models_py_lib",
        "//metisfl/python/learner/models/pytorch:models_pytorch_py_lib",
        "//metisfl/python/utils:utils_py_lib",
        "//metisfl/pybind/controller:controller_pybind_lib",
        "//metisfl/pybind/fhe:fhe_pybind_lib",
    ]
)