load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "protos",
    srcs = glob(["*.proto"]),
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:duration_proto",
    ]
)

cc_grpc_library(
    name = "cc_grpc_lib",
    protos = [":protos"]
)
