load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_binary")

package(default_visibility = ["//visibility:public"])

pybind_extension(
    # The name of this rule is associated with how the module will be imported
    # in python scripts. The rule will generate the lib controller.so, which is
    # also a data dependency for the py_library() rule below; therefore it needs
    # to remain UNCHANGED!
    name = "controller",
    srcs = ["controller_pybind.cc"],
    deps = [
        "//projectmetis/controller:controller",
        "//projectmetis/controller:controller_servicer"
    ]
)

py_library(
    name = "controller_pybind_lib",
    data = [":controller.so"],
)

py_library(
    name = "controller_demo",
    srcs = ["controller_demo.py", "controller.py"],
    srcs_version = "PY3",
    deps = [
        ":controller_pybind_lib",
        "//projectmetis/proto:controller_py_grpc_proto",
    ],
)

py_binary(
    name = "controller_demo_main",
    main = "controller_demo_main.py",
    srcs = ["controller_demo_main.py"],
    srcs_version = "PY3",
    python_version = "PY3",
    legacy_create_init = False,
    deps = [
        ":controller_demo",
    ],
)