load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "keras_models_py_lib",
    srcs = [
        "alzheimer_disease_cnns.py",
        "brainage_cnns.py",
        "cifar_cnn.py",
        "fashion_mnist_fc.py",
        "imdb_lstm.py",
        "melanoma_fc.py",
    ],
    srcs_version = "PY3",
    deps = [
        "//projectmetis/python/models:models_py_lib",
    ],
)
