package(default_visibility = ["//metisfl/controller:__subpackages__"])

cc_library(
    name = "aggregation",
    srcs = [
        "federated_average.cc",
        "federated_recency.cc",
        "federated_rolling_average_base.cc",
        "federated_stride.cc",
        "secure_aggregation.cc",
    ],
    hdrs = [
        "aggregation.h",
        "aggregation_function.h",
        "federated_average.h",
        "federated_recency.h",
        "federated_rolling_average_base.h",
        "federated_stride.h",
        "secure_aggregation.h",
    ],
    deps = [
        "//metisfl/controller/common:common",
        "//metisfl/encryption/palisade:palisade_wrapper",
        "//metisfl/proto:cc_grpc_lib",
        "@com_github_google_glog//:glog",
    ],
    linkopts = select({
      "//:linux_x86_64": ["-lgomp"],
      "//conditions:default": [],
    }),
    copts = [
        "-O3",
        "-fopenmp",
    ]
)

cc_test(
    name="aggregation_test",
    srcs=glob(["*_test.cc"]),
    deps=[
        ":aggregation",
        "//metisfl/controller/common:common",
        "//metisfl/encryption/palisade:palisade_wrapper",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)

