package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    deps = [
        "//metisfl/proto:cc_grpc_lib",
        "@gtest//:gtest",
    ],
)

cc_test (
    name = "proto_tensor_serde_test",
    srcs = ["proto_tensor_serde_test.cc"],
    deps = [
        ":macros",
        ":proto_tensor_serde",
        "//metisfl/proto:cc_grpc_lib",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)